[package]
name = "channel-latency"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[dependencies]
async-std = "1.6.4"
async-channel = "1.4.2"
crossbeam = { git = "https://github.com/stjepang/crossbeam", branch = "spsc" }
flume = "0.9.0"
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["rt-threaded", "sync"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "latency"
harness = false